# src/controllers/department.controller.js
@@ -4,6 +4,19 @@ const Department = require('../models/department.model')
 
 module.exports={
     list: async (req, res)=>{
+          /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "List Departments"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
+
         const data = await res.getModelList(Department)
         res.status(200).send({
             error:false,
@@ -13,6 +26,17 @@ module.exports={
     },
 
     create: async (req, res)=>{
+            /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Create Departments"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    name: 'Test Department'
+                }
+            }
+        */
         const data = await Department.create(req.body) //--> Gönderilen req. body'i Department model'de create yap
         res.status(201).send({
             error:false,
@@ -21,6 +45,11 @@ module.exports={
     },
 
     read: async (req, res)=>{
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Single Department"
+        */
+
         const data = await Department.findOne({_id: req.params.id})
         res.status(200).send({
             error:false,
@@ -29,6 +58,18 @@ module.exports={
     },
 
     update: async (req, res)=>{
+         /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Update Departments"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    name: 'Test Department'
+                }
+            }
+        */
+
         const data = await Department.updateOne({_id: req.params.id}, req.body)
         res.status(202).send({
             error:false,
